Terminada sección quienes somos. Añadido alojamiento. Fix de los acutes y demás. Casi listo para publicar ya!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +44,7 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#who">¿Quienes somos?</a>
+                            <a class="page-scroll" href="#who">&#191;Quienes somos?</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#wedding">La boda</a>
@@ -71,7 +71,7 @@
                     <div class="row">
                         <div class="col-md-6 col-md-offset-6">
                             <div class="opac">
-                                <h1 class="brand-heading">¡Mayte y Edu se casan!</h1>
+                                <h1 class="brand-heading">&#161;Mayte y Edu se casan!</h1>
                                 <p class="intro-text">Ser&aacute; el 25 de Julio de 2015<br>Aqu&iacute; puedes consultar toda la informaci&oacute;n sobre su boda</p>
                             </div>
                             <a href="#who" class="btn btn-circle page-scroll">
@@ -86,34 +86,34 @@
         <section id="who" class="container content-section text-center">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>¿Quienes somos?</h2>
+                    <h2>&#191;Quienes somos?</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 text-left">
                     <img src="img/eduPic.jpg" class="img-rounded left-block" alt="Edu" style='float:left;width:211px;height:201px; margin-right:10px;' />
-                    <p class="p-little">Edu paso su infancía en Sigüenza, un pueblecito de Guadalajara. Su gran aficción era la lectura, cuando era pequeño se pasaba tardes enteras en la biblioteca buscando su próximo libro a devorar, su madre tenía que regañarle para que no leyera mientras estaban en la mesa, jaja. Esa era su mayor travesura, ya que era un niño muy bueno.
+                    <p class="p-little">Edu paso su infanc&iacute;a en Sigüenza, un pueblecito de Guadalajara. Su gran aficci&oacute;n era la lectura, cuando era peque&ntilde;o se pasaba tardes enteras en la biblioteca buscando su pr&oacute;ximo libro a devorar, su madre ten&iacute;a que rega&ntilde;arle para que no leyera mientras estaban en la mesa, jaja. Esa era su mayor travesura, ya que era un ni&ntilde;o muy bueno.
                     </p>
                     <p class="p-little">
-                    Se fue a Madrid nada más cumplir los 18 años, para estudiar la carrera de Ing. Informática. Cuando la terminó, se puso a trabajar en la que hasta hoy día es su empresa, lo que habla de su caracter de seriedad, perseverancia y responsabilidad. 
-                    No le gustan los grandes cambios, su máxima es que cuando realmente se tiene todo lo que se busca, ¿qué sentido tiene cambiarlo?. 
+                    Se fue a Madrid nada m&aacute;s cumplir los 18 a&ntilde;os, para estudiar la carrera de Ing. Inform&aacute;tica. Cuando la termin&oacute;, se puso a trabajar en la que hasta hoy d&iacute;a es su empresa, lo que habla de su caracter de seriedad, perseverancia y responsabilidad.
+                    No le gustan los grandes cambios, su m&aacute;xima es que cuando realmente se tiene todo lo que se busca, &#191;qu&eacute; sentido tiene cambiarlo?.
                     </p>
                     <p class="p-little">
-                    Es una persona tierna, sincera , timida y muy fantasiosa. Sus grandes pasiones son correr para poder descargar energía y conservar su tipín de flaco y envolverse en sus escenarios de fantasia leyendo y  jugando, en sus pocos ratos libres en los que Mayte no le lia con hacer algo.
+                    Es una persona tierna, sincera , timida y muy fantasiosa. Sus grandes pasiones son correr para poder descargar energ&iacute;a y conservar su tip&iacute;n de flaco y envolverse en sus escenarios de fantasia leyendo y  jugando, en sus pocos ratos libres en los que Mayte no le lia con hacer algo.
                     </p>
                     <p class="p-little">
-                        En definitiva es un friki de mucho cuidado.
+                    En definitiva es un friki de mucho cuidado.
                     </p>
                 </div>
                 <div class="col-lg-5 text-left">
                     <img src="img/maytePic.jpg" class="img-rounded left-block" alt="Mayte" style='float:left;width:234px;height:201px; margin-right:10px;' />
-                    <p class="p-little">Mayte es una chica que nació en Puertollano una ciudad o 'pueblo' como le llama ella que valora esencialmente por sus grandes amigos, le encanta ir de tapeo con ellos (que buenas tapas ponen).
-                    </p>
-                    <p class="p-little"> 
-                    De niña paso su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitación de juguetes o ponian a los muñecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, ¡menuda paciencia la de su madre!.  
+                    <p class="p-little">Mayte es una chica que naci&oacute; en Puertollano una ciudad o 'pueblo' como le llama ella que valora esencialmente por sus grandes amigos, le encanta ir de tapeo con ellos (que buenas tapas ponen).
                     </p>
                     <p class="p-little">
-                    A Mayte le ha encantado siempre la lectura, siendo bien chica leia a shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la música y las peliculas y le indigan las tragedias de la vida y la injusticia social.
+                    De ni&ntilde;a paso su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitaci&oacute;n de juguetes o ponian a los mu&ntilde;ecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, &#161;menuda paciencia la de su madre!.
+                    </p>
+                    <p class="p-little">
+                    A Mayte le ha encantado siempre la lectura, siendo bien chica leia a shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la m&uacute;sica y las peliculas y le indigan las tragedias de la vida y la injusticia social.
                     </p>
                     <p class="p-little">
                     Estudio Informatica y esta terminado Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelecutalemente cuanto le sea posible. No para quieta y sin tener un nuevo plan.
@@ -122,18 +122,19 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h3>¿Cómo nos conocimos?</h3>
+                    <h3>&#191;C&oacute;mo nos conocimos?</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-left">
                     <p class="p-little">
-                        Edu y Mayte, después de estar trabajando en el mismo edificio en ISBAN durante un tiempo, en la misma planta, sin siquiera conocerse, acaban en la misma empresa, en el mismo cliente y proyecto en un edificio en el norte Madrid.<br/>
-                        El primer día que Edu llega allí, no tiene sitio asígnado, así que se sienta temporalmente en el sitio de una chica que está de vacaciones, la cual es Mayte, por supuesto. El destino es caprichoso.<br/>
-                        Allí se conocen pero, como la vida real no es como los cuentos, ni caen enamorados a primera vista, ni nada de nada...
+                    Edu y Mayte, despu&eacute;s de estar trabajando en el mismo edificio en ISBAN durante un tiempo, en la misma planta, sin siquiera conocerse, acaban en la misma empresa, en el mismo cliente y proyecto en un edificio en el norte Madrid.<br/>
+                    El primer d&iacute;a que Edu llega all&iacute;, no tiene sitio as&iacute;gnado, as&iacute; que se sienta temporalmente en el sitio de una chica que est&aacute; de vacaciones, la cual era Mayte, por supuesto. Y es que el destino es caprichoso...<br/>
+                    Aunque dicho destino en ese momento no les depar&oacute; su uni&oacute;n, si el comienzo de una amistad a traves del deporte, corriendo juntos en el mismo equipo, &#161;su primera carrera de empresas!.
                     </p>
                     <p class="p-little">
-                        Después de unos "divertidisimos" meses en ese proyecto, más conocido por un número, maldito, que no nombraremos aquí para no invocar seres del averno, Edu sale (¡por fin!) de ese proyecto, y sus caminos vuelven a separarse... pero no por mucho tiempo. Meses más tarde, Mayte también sale 
+                    Pasaron los meses de compa&ntilde;erismo con otras cuarenta excelentes personas en BBVA (&#161;haciendo m&aacute;s horas...!), y a Edu le destinan a trabajar a la oficina sin darles el destino a&uacute;n una oportunidad. Sus caminos vuelven a separarse... pero no por mucho tiempo. Meses m&aacute;s tarde, Mayte tambi&eacute;n sale y casualmente tambi&eacute;n a la oficina. <br/>
+                    Su encuentro en la oficina les ayuda a entablar una amistad que refuerzan corriendo carreras juntos. Hasta que llega un d&iacute;a en que Mayte al mudarse de piso le pide a Edu ver nordicos en una tienda de Parla (para conocerle m&aacute;s), &#161;que romantico jajaja!, la quedada se convierte en un encuentro para ver la pelicula: 'El Hobbit', y en un par de meses en un camino a surcar, corriendo, andando, pero lo m&aacute;s importante, poco a poco, juntos para compartir el resto de su vida.
                     </p>
                 </div>
             </div>
@@ -186,10 +187,10 @@
                     Estas son las normas de vestimenta:
                     </p>
                     <p>
-                    ¡Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, ¡ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una.
+                    &#161;Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, &#161;ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una (eso esperemos!, recordad el caracter de Mayte, jajajaja).
                     </p>
                     <p>
-                    Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. ¡Nada de copiarse!
+                    Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. &#161;Nada de copiarse!
                     </p>
                 </div>
             </div>
@@ -202,16 +203,22 @@
                     <h2>Alojamientos</h2>
                     <div class="text-left">
                         <p>
-                        Hay varias opciones, estas que hemos buscado son las que parecen más interesantes:
+                        Hay varias opciones, estas que hemos buscado son las que parecen m&aacute;s interesantes:
                         </p>
                         <p>
-                            <strong>El parador: </strong> En el mismo parador hay una oferta para los invitados a la boda de 122 euros la noche, con desayuno (u oferta mejor si la hay en ese momento). Tan solo es necesario reservar en el parador diciendoles que venis a nuestra boda, y automaticamente os harán el descuento.
+                        <strong>El parador: </strong> En el mismo parador nos ofrecen un precio para los invitados a la boda de 122 euros la noche, con desayuno (o el precio que mejor pudieran ofrecer en ese momento). Tan solo es necesario reservar en el parador diciendoles que venis a nuestra boda.
                         </p>
                         <p>
-                            <strong>Apartamentos Alcalá: </strong> <a href="http://apartamentosalcala.com/" target="_blank">apartamentosalcala.com</a> <br/>
-                            Buenos precios desde 58€ a 83€ la noche dependiendo del número de personas. <br/>
-                            Muy cerca del parador: son varios apartamentos, el más lejano a 8 minutos andando. <br/>
-
+                        <strong>Apartamentos Alcal&aacute;: </strong> <a href="http://apartamentosalcala.com/" target="_blank">apartamentosalcala.com</a> <br/>
+                        Buenos precios desde 58€ a 83€ la noche dependiendo del n&uacute;mero de personas. <br/>
+                        Muy cerca del parador: son varios apartamentos, el m&aacute;s lejano a 8 minutos andando. <br/>
+                        </p>
+                        <p>
+                        <strong>Evenia Alcal&aacute; Boutique Hotel: </strong> <a href="http://www.eveniahotels.com/eveniaalcalaboutique" target="_blank">eveniahotels.com</a> <br/>
+                        Buenas puntuaciones, aproximadamente a 65 euros la habitaci&oacute;n doble. <br/>
+                        </p>
+                        <p class="text-center">
+                            <strong>...Iremos actualizando con m&aacute;s alojamientos...</strong>
                         </p>
                     </div>
                 </div>
@@ -229,7 +236,7 @@
                         </p>
                         <p><strong>En coche:</strong> Desde Madrid, por la A2 direcci&oacute;n Zaragoza, tomando la salida 23 para entrar en Alcal&aacute;. Ruta de ejemplo desde Madrid centro: <a href="https://goo.gl/maps/DAsVb" target="_blank">Mapa</a> <br/>
                         Si venis direcci&oacute;n Madrid (por ejemplo desde Tarragona, Zaragoza...), entrad a Alcal&aacute; pro la salida 36 de la A2. Ruta de ejemplo desde Tarragona: <a href="https://goo.gl/maps/Cf2Uf" target="_blank">Mapa</a><br/>
-                        Aparcamiento: en Alcalá, como en Madrid, el estacionamiento es regulado (de pago), pero los sabados es solo hasta las 15. Si llegais más tarde de las 15, podeís aparcar en cualquier zona (verde o azul) gratis. El domingo es gratis todo el día.
+                        Aparcamiento: en Alcal&aacute;, como en Madrid, el estacionamiento es regulado (de pago), pero los sabados es solo hasta las 15. Si llegais m&aacute;s tarde de las 15, pode&iacute;s aparcar en cualquier zona (verde o azul) gratis. El domingo es gratis todo el d&iacute;a.
                         </p>
                         <p><strong>En cercanias (Renfe):</strong> Desde Madrid se puede llegar a Alcal&aacute; en cercanias por las lineas C2 y C7. Desde la estaci&oacute;n de cercanias son 15 minutos andando hasta el parador: <a href="https://goo.gl/maps/INuPz" target="_blank">Mapa</a>
                         </p>
@@ -237,11 +244,11 @@
                         </p>
                         <p><strong>Recomendaciones para la vuelta (a Madrid):</strong> Si no quieres dormir en Alcal&aacute;, ni coger el coche para volver, hay varias opciones:
                         <br/>
-                         - Autobus N202 (nocturno), a Avenida Am&eacute;rica: <a href="http://www.ctm-madrid.es/servlet/RedTransServlet?xh_ACCION=0&amp;xh_TIPO=30&amp;xh_PAGINA=8&amp;xh_COMODIN=202&amp;nocturnas.x=54&amp;nocturnas.y=6" target="_blank">Horarios y paradas</a>
+                        - Autobus N202 (nocturno), a Avenida Am&eacute;rica: <a href="http://www.ctm-madrid.es/servlet/RedTransServlet?xh_ACCION=0&amp;xh_TIPO=30&amp;xh_PAGINA=8&amp;xh_COMODIN=202&amp;nocturnas.x=54&amp;nocturnas.y=6" target="_blank">Horarios y paradas</a>
                         <br/>
-                         - Resto de lineas de autobus (ver link m&aacute;s arriba). Los primeros suelen salir sobre las 5:30 de la ma&ntilde;ana.
+                        - Resto de lineas de autobus (ver link m&aacute;s arriba). Los primeros suelen salir sobre las 5:30 de la ma&ntilde;ana.
                         <br/>
-                         - Cercanias: El primer tren hacia Madrid sale sobre las 05:53 de la ma&ntilde;ana (Ver ruta desde el parador, andando, m&aacute;s arriba)                        
+                        - Cercanias: El primer tren hacia Madrid sale sobre las 05:53 de la ma&ntilde;ana (Ver ruta desde el parador, andando, m&aacute;s arriba)
                         </p>
                     </div>
                 </div>
