--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand page-scroll" href="#page-top">
-                        <i class="fa fa-play-circle"></i>  <span class="light">Boda</span> de Mayte y Edu
+                        <span class="light">Boda</span> de Mayte y Edu
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -150,7 +150,7 @@
                 <div class="container opac">
                     <div class="col-lg-4 col-lg-offset-2 text-left">
                         <p>Lugar: Parador de Alcal&aacute; de Henares <br/>
-                        (Colegio de Santo Tomas) <br/>
+                        (Colegio de Santo Tom&aacute;s) <br/>
                         Calle de los Colegios, 8 <br/>
                         Alcal&aacute; de Henares, Madrid </p>
                         <p class="text-left">
@@ -160,7 +160,7 @@
                         </p>
                     </div>
                     <div class="col-lg-4 text-left">
-                        <p>Agenda prevista:</p>
+                        <p>Agenda prevista (orientativa):</p>
                         <ul>
                             <li> 19:30 Ceremonia</li>
                             <li> 20:30 Coctel</li>
@@ -187,7 +187,7 @@
                     Estas son las normas de vestimenta:
                     </p>
                     <p>
-                    &#161;Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, &#161;ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una (eso esperemos!, recordad el caracter de Mayte, jajajaja).
+                    &#161;Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, &#161;ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una (&#161;eso esperemos!, recordad el caracter de Mayte, jajajaja).
                     </p>
                     <p>
                     Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. &#161;Nada de copiarse!
