--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         Buenas puntuaciones, aproximadamente a 65 euros la habitaci&oacute;n doble. <br/>
                         </p>
                         <p class="text-center">
-                            <strong>...Iremos actualizando con m&aacute;s alojamientos...</strong>
+                        <strong>...Iremos actualizando con m&aacute;s alojamientos...</strong>
                         </p>
                     </div>
                 </div>
@@ -269,5 +269,13 @@
         <script src="js/jquery.easing.min.js"></script>
         <!-- Custom Theme JavaScript -->
         <script src="js/grayscale.js"></script>
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-54622865-1', 'auto');
+        ga('send', 'pageview');
+        </script>
     </body>
 </html>
