Fixes, varios acentos y erratas

--- a/index.html
+++ b/index.html
@@ -86,23 +86,23 @@
         <section id="who" class="container content-section text-center">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>&#191;Quienes somos?</h2>
+                    <h2>&#191;Qui&eacute;nes somos?</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 text-left">
                     <img src="img/eduPic.jpg" class="img-rounded left-block" alt="Edu" style='float:left;width:211px;height:201px; margin-right:10px;' />
-                    <p class="p-little">Edu paso su infanc&iacute;a en Sigüenza, un pueblecito de Guadalajara. Su gran aficci&oacute;n era la lectura, cuando era peque&ntilde;o se pasaba tardes enteras en la biblioteca buscando su pr&oacute;ximo libro a devorar, su madre ten&iacute;a que rega&ntilde;arle para que no leyera mientras estaban en la mesa, jaja. Esa era su mayor travesura, ya que era un ni&ntilde;o muy bueno.
+                    <p class="p-little">Edu pas&oacute; su infanc&iacute;a en Sigüenza, un pueblecito de Guadalajara. Su gran aficci&oacute;n era la lectura, cuando era peque&ntilde;o se pasaba tardes enteras en la biblioteca buscando su pr&oacute;ximo libro a devorar, su madre ten&iacute;a que rega&ntilde;arle para que no leyera mientras estaban en la mesa, jaja. Esa era su mayor travesura, ya que era un ni&ntilde;o muy bueno.
                     </p>
                     <p class="p-little">
                     Se fue a Madrid nada m&aacute;s cumplir los 18 a&ntilde;os, para estudiar la carrera de Ing. Inform&aacute;tica. Cuando la termin&oacute;, se puso a trabajar en la que hasta hoy d&iacute;a es su empresa, lo que habla de su caracter de seriedad, perseverancia y responsabilidad.
                     No le gustan los grandes cambios, su m&aacute;xima es que cuando realmente se tiene todo lo que se busca, &#191;qu&eacute; sentido tiene cambiarlo?.
                     </p>
                     <p class="p-little">
-                    Es una persona tierna, sincera , timida y muy fantasiosa. Sus grandes pasiones son correr para poder descargar energ&iacute;a y conservar su tip&iacute;n de flaco y envolverse en sus escenarios de fantasia leyendo y  jugando, en sus pocos ratos libres en los que Mayte no le lia con hacer algo.
+                    Es una persona tierna, sincera , t&iacute;mida y muy fantasiosa. Sus grandes pasiones son correr para poder descargar energ&iacute;a y conservar su tip&iacute;n de flaco y envolverse en sus escenarios de fantasia leyendo y jugando, en sus pocos ratos libres en los que Mayte no le l&iacute;a con hacer algo.
                     </p>
                     <p class="p-little">
-                    En definitiva es un friki de mucho cuidado.
+                    En definitiva, es un friki de mucho cuidado.
                     </p>
                 </div>
                 <div class="col-lg-5 text-left">
@@ -110,13 +110,13 @@
                     <p class="p-little">Mayte es una chica que naci&oacute; en Puertollano una ciudad o 'pueblo' como le llama ella que valora esencialmente por sus grandes amigos, le encanta ir de tapeo con ellos (que buenas tapas ponen).
                     </p>
                     <p class="p-little">
-                    De ni&ntilde;a paso su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitaci&oacute;n de juguetes o ponian a los mu&ntilde;ecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, &#161;menuda paciencia la de su madre!.
+                    De ni&ntilde;a pas&oacute; su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitaci&oacute;n de juguetes o ponian a los mu&ntilde;ecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, &#161;menuda paciencia la de su madre!.
                     </p>
                     <p class="p-little">
-                    A Mayte le ha encantado siempre la lectura, siendo bien chica leia a shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la m&uacute;sica y las peliculas y le indigan las tragedias de la vida y la injusticia social.
+                    A Mayte le ha encantado siempre la lectura, siendo bien chica leia a Shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la m&uacute;sica y las pel&iacute;culas y le indigan las tragedias de la vida y la injusticia social.
                     </p>
                     <p class="p-little">
-                    Estudio Informatica y esta terminado Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelecutalemente cuanto le sea posible. No para quieta y sin tener un nuevo plan.
+                    Estudi&oacute; Inform&aacute;tica y esta terminando Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelectualemente cuanto le sea posible. No para quieta y sin tener un nuevo plan.
                     </p>
                 </div>
             </div>
