--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         Como llegar:
                         </p>
                         <p><strong>En coche:</strong> Desde Madrid, por la A2 direcci&oacute;n Zaragoza, tomando la salida 23 para entrar en Alcal&aacute;. Ruta de ejemplo desde Madrid centro: <a href="https://goo.gl/maps/DAsVb" target="_blank">Mapa</a> <br/>
-                        Si venis direcci&oacute;n Madrid (por ejemplo desde Tarragona, Zaragoza...), entrad a Alcal&aacute; pro la salida 36 de la A2. Ruta de ejemplo desde Tarragona: <a href="https://goo.gl/maps/Cf2Uf" target="_blank">Mapa</a><br/>
+                        Si venis direcci&oacute;n Madrid (por ejemplo desde Tarragona, Zaragoza...), entrad a Alcal&aacute; por la salida 36 de la A2. Ruta de ejemplo desde Tarragona: <a href="https://goo.gl/maps/Cf2Uf" target="_blank">Mapa</a><br/>
                         Aparcamiento: en Alcal&aacute;, como en Madrid, el estacionamiento es regulado (de pago), pero los sabados es solo hasta las 15. Si llegais m&aacute;s tarde de las 15, pode&iacute;s aparcar en cualquier zona (verde o azul) gratis. El domingo es gratis todo el d&iacute;a.
                         </p>
                         <p><strong>En cercanias (Renfe):</strong> Desde Madrid se puede llegar a Alcal&aacute; en cercanias por las lineas C2 y C7. Desde la estaci&oacute;n de cercanias son 15 minutos andando hasta el parador: <a href="https://goo.gl/maps/INuPz" target="_blank">Mapa</a>
