--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     A Mayte le ha encantado siempre la lectura, siendo bien chica leia a Shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la m&uacute;sica y las pel&iacute;culas y le indigan las tragedias de la vida y la injusticia social.
                     </p>
                     <p class="p-little">
-                    Estudi&oacute; Inform&aacute;tica y esta terminando Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelectualemente cuanto le sea posible. No para quieta y sin tener un nuevo plan.
+                    Estudi&oacute; Inform&aacute;tica y est&aacute; terminando Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelectualemente cuanto le sea posible. No para quieta y sin tener un nuevo plan.
                     </p>
                 </div>
             </div>
@@ -231,7 +231,7 @@
                     <h2>Transporte</h2>
                     <div class="text-left">
                         <p>
-                        El parador de se encuentra en pleno centro de Alcal&aacute; de Henares. <br/>
+                        El parador se encuentra en pleno centro de Alcal&aacute; de Henares. <br/>
                         Como llegar:
                         </p>
                         <p><strong>En coche:</strong> Desde Madrid, por la A2 direcci&oacute;n Zaragoza, tomando la salida 23 para entrar en Alcal&aacute;. Ruta de ejemplo desde Madrid centro: <a href="https://goo.gl/maps/DAsVb" target="_blank">Mapa</a> <br/>
