--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p class="p-little">Mayte es una chica que naci&oacute; en Puertollano una ciudad o 'pueblo' como le llama ella que valora esencialmente por sus grandes amigos, le encanta ir de tapeo con ellos (que buenas tapas ponen).
                     </p>
                     <p class="p-little">
-                    De ni&ntilde;a pas&oacute; su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitaci&oacute;n de juguetes o ponian a los mu&ntilde;ecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, &#161;menuda paciencia la de su madre!.
+                    De ni&ntilde;a pas&oacute; su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitaci&oacute;n de juguetes o ponian a los mu&ntilde;ecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, &#161;menuda paciencia la de su papa y mama!.
                     </p>
                     <p class="p-little">
                     A Mayte le ha encantado siempre la lectura, siendo bien chica leia a Shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la m&uacute;sica y las pel&iacute;culas y le indigan las tragedias de la vida y la injusticia social.
@@ -187,7 +187,7 @@
                     Estas son las normas de vestimenta:
                     </p>
                     <p>
-                    &#161;Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, &#161;ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una (&#161;eso esperemos!, recordad el caracter de Mayte, jajajaja).
+                    &#161;Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, &#161;ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una (&#161;eso esperamos !, recordad el caracter de Mayte, jajajaja).
                     </p>
                     <p>
                     Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. &#161;Nada de copiarse!
