Añadidos metas description y author

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="Web de la boda de Mayte y Edu. Aquí encontrarás toda la información sobre su boda :)">
+        <meta name="author" content="Mayte y Edu">
         <title>La boda de Mayte y Edu</title>
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
