Añadido alojamiento. Fix en js

--- a/index.html
+++ b/index.html
@@ -217,9 +217,10 @@
                         <strong>Evenia Alcal&aacute; Boutique Hotel: </strong> <a href="http://www.eveniahotels.com/eveniaalcalaboutique" target="_blank">eveniahotels.com</a> <br/>
                         Buenas puntuaciones, aproximadamente a 65 euros la habitaci&oacute;n doble. <br/>
                         </p>
-                        <p class="text-center">                            
-                            <strong>...Iremos actualizando con m&aacute;s alojamientos...</strong>
-                        </p>
+                        <p>
+                        <strong>Hostal Don Juan I: </strong> <a href="http://hostaldonjuani.com/" target="_blank">hostaldonjuani.com</a> <br/>
+                        Hotel, apartamento y hostal. Muy cerca del parador, con muy buenas opiniones. Con piscina.
+                        </p>                        
                     </div>
                 </div>
             </div>
